--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,8 @@
  See https://help.github.com/articles/ignoring-files/ for more about ignoring files.
 
+# secrets
+ secrets.json
+
 # dependencies
 node_modules
 node_modules/
