--- a/package.json
+++ b/package.json
@@ -2,5 +2,8 @@
   "dependencies": {
     "@openzeppelin/contracts": "^4.3.3",
     "@openzeppelin/contracts-upgradeable": "^4.3.3"
+  },
+  "devDependencies": {
+    "truffle-plugin-verify": "^0.5.18"
   }
 }
