--- a/package.json
+++ b/package.json
@@ -2,7 +2,9 @@
   "dependencies": {
     "@chainlink/contracts": "^0.2.2",
     "@openzeppelin/contracts": "^4.3.3",
-    "@openzeppelin/contracts-upgradeable": "^4.3.3"
+    "@openzeppelin/contracts-upgradeable": "^4.3.3",
+    "@truffle/hdwallet-provider": "^1.7.0",
+    "dotenv": "^10.0.0"
   },
   "devDependencies": {
     "truffle-plugin-verify": "^0.5.18"
