--- a/package.json
+++ b/package.json
@@ -1,12 +1,9 @@
 {
   "dependencies": {
-    "@chainlink/contracts": "^0.2.2",
-    "@openzeppelin/contracts": "^4.3.3",
-    "@openzeppelin/contracts-upgradeable": "^4.3.3",
-    "@truffle/hdwallet-provider": "^1.7.0",
-    "dotenv": "^10.0.0"
+    "@openzeppelin/contracts": "^4.4.0",
+    "@openzeppelin/contracts-upgradeable": "^4.3.3"
   },
   "devDependencies": {
-    "truffle-plugin-verify": "^0.5.18"
+    "@truffle/hdwallet-provider": "^1.7.0"
   }
 }
